# Netzwerk

./: .gitignore  LICENSE  README.md  bench-plot.ipynb  bench.sh  circuit-plot.ipynb  gen.py  requirements.txt
data/: .gitignore
src/: bench.py  setup.cfg  setup.py  util.py
src/netzwerk/: CMakeLists.txt  __init__.py  _version.py  main.cc  netzwerk.cc  optimizer.py  run.py  spanning_tree.py  wrapper.py
src/netzwerk/include/: BitSet.hpp  Common.hpp  Greedy.cpp  LinDP.cpp  Optimizer.hpp  Optimizer.tcc  TensorIKKBZ.cpp  TensorNetwork.cpp  TensorNetwork.hpp  Util.hpp
